spacing fixes on graphic, new videos

--- a/src/Styles/layouts.scss
+++ b/src/Styles/layouts.scss
@@ -275,3 +275,8 @@
 .flex-center{
 	align-items: center;
 }
+
+.graphic-row{
+	margin-top: -200px !important;
+	margin-bottom: -200px !important;
+}
